testimonials on poster

--- a/src/produkt_bog.html
+++ b/src/produkt_bog.html
@@ -222,7 +222,7 @@
     <div class="bg-white">
         <div class="pt-6">
             <nav aria-label="Breadcrumb">
-                <ol role="list" class="max-w-2xl mx-auto px-4 flex items-center space-x-2 sm:px-6 lg:max-w-7xl lg:px-8">
+                <ol role="list" class="max-w-2xl mx-auto pb-0 mb-0 px-4 flex items-center space-x-2 sm:px-6 lg:max-w-7xl lg:px-8">
                     <li>
                         <div class="flex items-center">
                             <a href="#" class="mr-2 text-sm font-medium text-gray-900"><a href="litteratur.html"> Litteratur
@@ -326,7 +326,7 @@
                                 </svg>
                             </div>
                             <p class="sr-only">4 out of 5 stars</p>
-                            <a href="#" class="ml-3 text-sm font-medium text-black hover:text-black">2
+                            <a href="#anmeldelser" class="ml-3 text-sm font-medium text-black hover:text-black">2
                                 anmeldelser</a>
                         </div>
                     </div>
