--- a/src/produkt_plakat.html
+++ b/src/produkt_plakat.html
@@ -270,7 +270,7 @@
 
             <!-- Product info -->
             <div
-                class="max-w-2xl mx-auto pt-10 pb-16 px-4 sm:px-6 lg:max-w-7xl lg:pt-16 lg:pb-24 lg:px-8 lg:grid lg:grid-cols-3 lg:grid-rows-[auto,auto,1fr] lg:gap-x-8">
+                class="max-w-2xl mx-auto pt-10 pb-16 px-4 sm:px-6 lg:max-w-7xl lg:pt-16 lg:pb-12 lg:px-8 lg:grid lg:grid-cols-3 lg:grid-rows-[auto,auto,1fr] lg:gap-x-8">
                 <div class="lg:col-span-2 lg:border-r lg:border-gray-200 lg:pr-8">
                     <h1 class="text-2xl font-extrabold tracking-tight text-gray-900 sm:text-3xl">Højt på en gren</h1>
                     <h3 class="text-xl mt-7 tracking-tight text-gray-900 sm:text-xl">Af Edgar Poe</h3>
@@ -326,7 +326,7 @@
                                 </svg>
                             </div>
                             <p class="sr-only">4 out of 5 stars</p>
-                            <a href="#" class="ml-3 text-sm font-medium text-black hover:text-black">2
+                            <a href="#anmeldelser" class="ml-3 text-sm font-medium text-black hover:text-black">2
                                 anmeldelser</a>
                         </div>
                     </div>
@@ -524,6 +524,110 @@
             </div>
         </div>
     </div>
+
+    <!-- Testimonials start -->
+    <section id="anmeldelser" class="bg-white">
+      <div class="max-w-screen-xl px-4 mb-28 mx-auto sm:px-6 lg:px-8">
+        <h2 class="text-2xl lg:text-3xl font-bold tracking-tight text-center">
+          Anmeldelser
+        </h2>
+
+        <div class="mt-10">
+          <div class="grid grid-cols-3 gap-4">
+            <!-- Review 1 start -->
+            <div class="">
+              <blockquote class="p-8 ">
+                <div class="flex items-center">
+                  <img
+                    src="https://www.hyperui.dev/photos/man-4.jpeg"
+                    alt=""
+                    class="object-cover w-16 h-16 rounded-full"
+                  />
+
+                  <div class="ml-4">
+                    <div class="flex space-x-0.5 justify-center text-green-black">
+                      <svg class="w-6 h-auto" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M14.43 10L12 2l-2.43 8H2l6.18 4.41L5.83 22L12 17.31L18.18 22l-2.35-7.59L22 10z"></path></svg>
+                      <svg class="w-6 h-auto" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M14.43 10L12 2l-2.43 8H2l6.18 4.41L5.83 22L12 17.31L18.18 22l-2.35-7.59L22 10z"></path></svg>
+                      <svg class="w-6 h-auto" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M14.43 10L12 2l-2.43 8H2l6.18 4.41L5.83 22L12 17.31L18.18 22l-2.35-7.59L22 10z"></path></svg>
+                      <svg class="w-6 h-auto" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M14.43 10L12 2l-2.43 8H2l6.18 4.41L5.83 22L12 17.31L18.18 22l-2.35-7.59L22 10z"></path></svg>
+                      <svg class="w-6 h-auto" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M14.43 10L12 2l-2.43 8H2l6.18 4.41L5.83 22L12 17.31L18.18 22l-2.35-7.59L22 10z"></path></svg>
+                    </div>
+
+                    <p class="mt-1 text-lg font-medium">Line Vagner</p>
+                  </div>
+                </div>
+
+                <p class="mt-6">
+                  Super flot tryk. Jeg købte tre 70x100 plakater, og papiret er dejlig tykt. Tilpas mat, så der ikke er for mange reflektioner.
+                </p>
+              </blockquote>
+            </div>
+            <!-- Review 1 end -->
+
+            <!-- Review 2 start -->
+            <div class="">
+              <blockquote class="p-8 ">
+                <div class="flex items-center">
+                  <img
+                    src="https://www.hyperui.dev/photos/man-4.jpeg"
+                    alt=""
+                    class="object-cover w-16 h-16 rounded-full"
+                  />
+
+                  <div class="ml-4">
+                    <div class="flex space-x-0.5 justify-center text-green-black">
+                      <svg class="w-6 h-auto" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M14.43 10L12 2l-2.43 8H2l6.18 4.41L5.83 22L12 17.31L18.18 22l-2.35-7.59L22 10z"></path></svg>
+                      <svg class="w-6 h-auto" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M14.43 10L12 2l-2.43 8H2l6.18 4.41L5.83 22L12 17.31L18.18 22l-2.35-7.59L22 10z"></path></svg>
+                      <svg class="w-6 h-auto" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M14.43 10L12 2l-2.43 8H2l6.18 4.41L5.83 22L12 17.31L18.18 22l-2.35-7.59L22 10z"></path></svg>
+                      <svg class="w-6 h-auto" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M14.43 10L12 2l-2.43 8H2l6.18 4.41L5.83 22L12 17.31L18.18 22l-2.35-7.59L22 10z"></path></svg>
+                    </div>
+
+                    <p class="mt-1 text-lg font-medium">Poul Ruth</p>
+                  </div>
+                </div>
+
+                <p class="mt-6">
+                  Alt gik som forventet - hurtig og korrekt levering. Havde dog gerne set at det var lidt billigere:-D
+                </p>
+              </blockquote>
+            </div>
+            <!-- Review 2 end -->
+
+            <!-- Review 3 start -->
+            <div class="">
+              <blockquote class="p-8 ">
+                <div class="flex items-center">
+                  <img
+                    src="https://www.hyperui.dev/photos/man-4.jpeg"
+                    alt=""
+                    class="object-cover w-16 h-16 rounded-full"
+                  />
+
+                  <div class="ml-4">
+                    <div class="flex space-x-0.5 justify-center text-green-black">
+                      <svg class="w-6 h-auto" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M14.43 10L12 2l-2.43 8H2l6.18 4.41L5.83 22L12 17.31L18.18 22l-2.35-7.59L22 10z"></path></svg>
+                      <svg class="w-6 h-auto" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M14.43 10L12 2l-2.43 8H2l6.18 4.41L5.83 22L12 17.31L18.18 22l-2.35-7.59L22 10z"></path></svg>
+                      <svg class="w-6 h-auto" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M14.43 10L12 2l-2.43 8H2l6.18 4.41L5.83 22L12 17.31L18.18 22l-2.35-7.59L22 10z"></path></svg>
+                      <svg class="w-6 h-auto" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M14.43 10L12 2l-2.43 8H2l6.18 4.41L5.83 22L12 17.31L18.18 22l-2.35-7.59L22 10z"></path></svg>
+                      <svg class="w-6 h-auto" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M14.43 10L12 2l-2.43 8H2l6.18 4.41L5.83 22L12 17.31L18.18 22l-2.35-7.59L22 10z"></path></svg>
+                    </div>
+
+                    <p class="mt-1 text-lg font-medium">Andrea V.</p>
+                  </div>
+                </div>
+
+                <p class="mt-6">
+                  Jeg har haft en nederen periode, og at se Lunefuld Lykkes plakater hjælper mig med - det er rart at vide at jeg ikke er den eneste med ar i sjælen. Og så pynter plakaterne flot på væggene:-)                </p>
+              </blockquote>
+            </div>
+            <!-- Review 3 end -->
+         
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Testimonials slut -->
     <!-- Content slut-->
 
     <!-- Footer start -->
