button fix + temporary button added

--- a/src/index.html
+++ b/src/index.html
@@ -301,6 +301,16 @@
         <svg class="w-7 h-auto ml-5 relative group-hover:fill-white group-active:fill-white" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#fffff" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
       </div>
     </a>
+
+    <a class="relative inline-block px-7 py-2.5 overflow-hidden border-2 border-black group focus:outline-none focus:ring" href="fotografer.html">
+      <div class="inline-flex items-center">
+        <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-black group-hover:w-full group-active:bg-black"></span>
+        <span class="relative text-base font-medium text-black transition-colors group-hover:text-white">
+          Mød fotograferne
+        </span>
+        <svg class="w-7 h-auto ml-5 relative group-hover:fill-white group-active:fill-white" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#fffff" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
+      </div>
+    </a>
     <!-- Landingpages buttons end -->
     
     <!-- Cookie start -->
@@ -386,7 +396,7 @@
                       <span class="relative text-base font-medium text-white transition-colors group-hover:text-black">
                         Få din rabatkode
                       </span>
-                      <svg class="w-7 h-auto ml-1 relative group-hover:fill-black group-active:fill-black" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
+                      <svg class="w-7 h-auto ml-1 relative text-white group-hover:text-black" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
                     </div>
                   </a>
                 </div>
