temporary button removed + new added

--- a/src/index.html
+++ b/src/index.html
@@ -301,16 +301,6 @@
         <svg class="w-7 h-auto ml-5 relative group-hover:fill-white group-active:fill-white" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#fffff" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
       </div>
     </a>
-
-    <a class="relative inline-block px-7 py-2.5 overflow-hidden border-2 border-black group focus:outline-none focus:ring" href="fotografer.html">
-      <div class="inline-flex items-center">
-        <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-black group-hover:w-full group-active:bg-black"></span>
-        <span class="relative text-base font-medium text-black transition-colors group-hover:text-white">
-          Mød fotograferne
-        </span>
-        <svg class="w-7 h-auto ml-5 relative group-hover:fill-white group-active:fill-white" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#fffff" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
-      </div>
-    </a>
     <!-- Landingpages buttons end -->
     
     <!-- Cookie start -->
@@ -526,7 +516,7 @@
       <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
       <section>
-        <div class="max-w-screen-xl px-4 py-12 mx-auto sm:px-6 lg:px-8">
+        <div class="max-w-screen-xl px-4 py-16 mx-auto sm:px-6 lg:px-8">
           <div class="text-center">
             <h2 class="text-2xl lg:text-3xl font-bold">
               De mest solgte plakater
@@ -662,12 +652,22 @@
 
             <div class="mt-0 swiper-pagination lg:hidden"></div>
 
-            <div class="flex justify-center mt-7 mb-10 w-auto">
-              <a class="relative inline-block mt-9 px-7 py-2.5 overflow-hidden border-2 border-black group focus:outline-none focus:ring" href="plakater.html">
+            <div class="flex flex-wrap justify-center gap-10 mt-10">
+              <a class="relative inline-block px-7 py-2.5 overflow-hidden border-2 border-black group focus:outline-none focus:ring" href="plakater.html">
                 <div class="inline-flex items-center">
                   <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-black group-hover:w-full group-active:bg-black"></span>
                   <span class="relative text-base font-medium text-black transition-colors group-hover:text-white">
                     Se hele udvalget her
+                  </span>
+                  <svg class="w-7 h-auto ml-5 relative group-hover:fill-white group-active:fill-white" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#fffff" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
+                </div>
+              </a>
+  
+              <a class="relative inline-block px-7 py-2.5 overflow-hidden border-2 border-black group focus:outline-none focus:ring" href="fotografer.html">
+                <div class="inline-flex items-center">
+                  <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-black group-hover:w-full group-active:bg-black"></span>
+                  <span class="relative text-base font-medium text-black transition-colors group-hover:text-white">
+                    Mød kunstnerne bag
                   </span>
                   <svg class="w-7 h-auto ml-5 relative group-hover:fill-white group-active:fill-white" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#fffff" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
                 </div>
