--- a/src/index.html
+++ b/src/index.html
@@ -663,7 +663,7 @@
                 </div>
               </a>
   
-              <a class="relative inline-block px-7 py-2.5 overflow-hidden border-2 border-black group focus:outline-none focus:ring" href="fotografer.html">
+              <a class="relative inline-block px-7 py-2.5 overflow-hidden border-2 border-black group focus:outline-none focus:ring" href="kunstnere.html">
                 <div class="inline-flex items-center">
                   <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-black group-hover:w-full group-active:bg-black"></span>
                   <span class="relative text-base font-medium text-black transition-colors group-hover:text-white">
