--- a/src/kunstnere.html
+++ b/src/kunstnere.html
@@ -227,7 +227,7 @@
         <div class="lg:px-20 md:px-6 px-4 md:py-12 py-8">
             <div class="max-w-xs md:max-w-md lg:max-w-md mx-auto mb-10 lg:mb-14">
                 <h1 class="text-3xl lg:text-4xl font-semibold text-gray-800  text-center ">
-                    Mød fotograferne
+                    Mød kunstnerne
                 </h1>
                 <p class="text-center pt-8">
                     Hos Lunefuld Lykke går vi meget op i at støtte kunstere. Derfor kan du her læse alt om kunstnerne bag plakaterne.
@@ -235,125 +235,103 @@
             </div>
 
             <!-- Inspiration start -->
-            <div class="lg:flex items-stretch md:mt-12 mt-8">
-                <div class="lg:w-1/2">
-                    <div class="sm:flex items-center justify-between xl:gap-x-8 gap-x-6">
-                        <!-- Tom Jørgensen -->
-                        <div class="sm:w-1/2 relative">
-                            <div>
-                                <div class="absolute bottom-0 bg-black bg-opacity-50 left-0 p-6">
-                                    <h2 class="text-xl font-semibold 5 text-white">Tom Jørgensen</h2>
-                                    <a class="relative mt-2 inline-block px-3 py-2.5 overflow-hidden border-2 border-white group focus:outline-none focus:ring" href="litteratur.html">
-                                      <div class="inline-flex items-center">
-                                        <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-white group-hover:w-full group-active:bg-white"></span>
-                                        <span class="relative text-sm font-medium text-white transition-colors group-hover:text-black">
-                                          Læs om kunstneren
-                                        </span>
-                                        <svg class="w-7 h-auto ml-1 relative text-white group-hover:text-black" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
-                                      </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <img src="/src/content/tom-jorgensen.jpg" class="w-full" alt="chair" />
-                        </div>
-                        <!-- Turið Dagstad -->
-                        <div class="sm:w-1/2 sm:mt-0 mt-4 relative">
-                            <div>
-                                <div class="absolute bottom-0 left-0 p-6">
-                                    <h2 class="text-xl font-semibold 5  text-white">Turið Dagstad</h2>
-                                    <a class="relative mt-2 inline-block px-3 py-2.5 overflow-hidden border-2 border-white group focus:outline-none focus:ring" href="litteratur.html">
-                                      <div class="inline-flex items-center">
-                                        <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-white group-hover:w-full group-active:bg-white"></span>
-                                        <span class="relative text-sm font-medium text-white transition-colors group-hover:text-black">
-                                          Læs om kunstneren
-                                        </span>
-                                        <svg class="w-7 h-auto ml-1 relative text-white group-hover:text-black" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
-                                      </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <img src="/src/content/turid.jpg" class="w-full" alt="wall design" />
-                        </div>
-                    </div>
-                    <div class="relative">
-                        <div>
-                            <p class="md:p-10 p-6 text-xs font-medium leading-3 text-white absolute top-0 right-0">2.
-                                Februar 2022</p>
-                            <div class="absolute bottom-0 left-0 md:p-10 p-6">
-                                <h2 class="text-xl font-semibold 5 text-white">Møbler og plakater</h2>
-                                <p class="text-base leading-4 text-white mt-2">Guide til billedrammer og møbler</p>
-                                <a href="post.html"
-                                    class="focus:outline-none focus:underline flex items-center mt-4 cursor-pointer text-white hover:text-gray-200 hover:underline">
-                                    <p class="pr-2 text-sm font-medium leading-none">Læs mere</p>
-                                    <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/blog-I-svg1.svg"
-                                        alt="arrow">
-                                </a>
-                            </div>
-                        </div>
-                        <img src="content/kalvebod-poster-vaeg.jpg" alt="sitting place"
-                            class="w-full mt-8 md:mt-6 hidden sm:block" />
-                        <img class="w-full mt-4 sm:hidden" src="content/kalvebod-poster-vaeg.jpg" alt="sitting place" />
-                    </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8 mt-8 md:mt-10">
+
+              <!-- Tom Jørgensen -->
+              <div>
+                <div class="relative">
+                  <div class="absolute bottom-0 left-0 p-4 bg-black">
+                    <h2 class="text-2xl font-semibold 5 text-white">Tom Jørgensen</h2>
+                    <a class="relative mt-4 inline-block px-3 py-2.5 overflow-hidden border-2 border-white group focus:outline-none focus:ring" href="#">
+                      <div class="inline-flex items-center">
+                        <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-white group-hover:w-full group-active:bg-white"></span>
+                        <span class="relative text-sm font-medium text-white transition-colors group-hover:text-black">
+                          Læs om kunstneren
+                        </span>
+                        <svg class="w-7 h-auto ml-1 relative text-white group-hover:text-black" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
+                      </div>
+                    </a>
+                  </div>
+                <img src="/src/content/tom-jorgensen.jpg" class="h-fit w-auto" alt="chair" />
                 </div>
-                <div class="lg:w-1/2 xl:ml-8 lg:ml-4 lg:mt-0 md:mt-6 mt-4 lg:flex flex-col justify-between">
-                    <div class="relative">
-                        <div>
-                            <p class="md:p-10 p-6 text-xs font-medium leading-3 text-white absolute top-0 right-0">12.
-                                Januar 2022</p>
-                            <div class="absolute bottom-0 left-0 md:p-10 p-6">
-                                <h2 class="text-xl font-semibold 5 text-white">Husk lyset</h2>
-                                <p class="text-base leading-4 text-white mt-2">Lys rummet godt op</p>
-                                <a href="post.html"
-                                    class="focus:outline-none focus:underline flex items-center mt-4 cursor-pointer text-white hover:text-gray-200 hover:underline">
-                                    <p class="pr-2 text-sm font-medium leading-none">Læs mere</p>
-                                    <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/blog-I-svg1.svg"
-                                        alt="arrow">
-                                </a>
-                            </div>
-                        </div>
-                        <img src="https://i.ibb.co/6Wfjf2w/img-4.png" alt="sitting place"
-                            class="w-full sm:block hidden" />
-                        <img class="w-full sm:hidden" src="https://i.ibb.co/dpXStJk/Rectangle-29.png"
-                            alt="sitting place" />
-                    </div>
-                    <div class="sm:flex items-center justify-between xl:gap-x-8 gap-x-6 md:mt-6 mt-4">
-                        <div class="relative w-full">
-                            <div>
-                                <p class="p-6 text-xs font-medium leading-3 text-white absolute top-0 right-0">3. Januar
-                                    2022</p>
-                                <div class="absolute bottom-0 left-0 p-6">
-                                    <h2 class="text-xl font-semibold 5 text-white">Edgar Poe</h2>
-                                    <p class="text-base leading-4 text-white mt-2">Årets kunstner</p>
-                                    <a href="post.html"
-                                        class="focus:outline-none focus:underline flex items-center mt-4 cursor-pointer text-white hover:text-gray-200 hover:underline">
-                                        <p class="pr-2 text-sm font-medium leading-none">Læs mere</p>
-                                        <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/blog-I-svg1.svg"
-                                            alt="arrow">
-                                    </a>
-                                </div>
-                            </div>
-                            <img src="content/kalvebod-poster.jpg" class="w-full" alt="chair" />
-                        </div>
-                        <div class="relative w-full sm:mt-0 mt-4">
-                            <div>
-                                <p class="p-6 text-xs font-medium leading-3 text-white absolute top-0 right-0">1.
-                                    December 2022</p>
-                                <div class="absolute bottom-0 left-0 p-6">
-                                    <h2 class="text-xl font-semibold 5 text-white">Vinterens motiver</h2>
-                                    <p class="text-base leading-4 text-white mt-2">Nyd kulden - indenfor</p>
-                                    <a href="post.html"
-                                        class="focus:outline-none focus:underline flex items-center mt-4 cursor-pointer text-white hover:text-gray-200 hover:underline">
-                                        <p class="pr-2 text-sm font-medium leading-none">Læs mere</p>
-                                        <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/blog-I-svg1.svg"
-                                            alt="arrow">
-                                    </a>
-                                </div>
-                            </div>
-                            <img src="content/posters/poster-4.jpg" class="w-full" alt="wall design" />
-                        </div>
-                    </div>
+              </div>
+
+              <!-- Turið Dagstad -->
+              <div>
+                <div class="relative">
+                  <div class="absolute bottom-0 left-0 p-4 bg-black">
+                    <h2 class="text-2xl font-semibold 5 text-white">Turið Dagstad</h2>
+                    <a class="relative mt-4 inline-block px-3 py-2.5 overflow-hidden border-2 border-white group focus:outline-none focus:ring" href="#">
+                      <div class="inline-flex items-center">
+                        <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-white group-hover:w-full group-active:bg-white"></span>
+                        <span class="relative text-sm font-medium text-white transition-colors group-hover:text-black">
+                          Læs om kunstneren
+                        </span>
+                        <svg class="w-7 h-auto ml-1 relative text-white group-hover:text-black" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
+                      </div>
+                    </a>
+                  </div>
+                <img src="/src/content/turid.jpg" class="h-fit w-auto" alt="chair" />
                 </div>
-            </div>
+              </div>
+
+              <!-- Steffi Graf -->
+              <div>
+                <div class="relative">
+                  <div class="absolute bottom-0 left-0 p-4 bg-black">
+                    <h2 class="text-2xl font-semibold 5 text-white">Steffi Graf</h2>
+                    <a class="relative mt-4 inline-block px-3 py-2.5 overflow-hidden border-2 border-white group focus:outline-none focus:ring" href="#">
+                      <div class="inline-flex items-center">
+                        <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-white group-hover:w-full group-active:bg-white"></span>
+                        <span class="relative text-sm font-medium text-white transition-colors group-hover:text-black">
+                          Læs om kunstneren
+                        </span>
+                        <svg class="w-7 h-auto ml-1 relative text-white group-hover:text-black" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
+                      </div>
+                    </a>
+                  </div>
+                <img src="/src/content/kalvebod-poster.jpg" class="h-fit w-auto" alt="chair" />
+                </div>
+              </div>
+
+              <!-- Varte Meo -->
+              <div>
+                <div class="relative">
+                  <div class="absolute bottom-0 left-0 p-4 bg-black">
+                    <h2 class="text-2xl font-semibold 5 text-white">Varte Meo</h2>
+                    <a class="relative mt-4 inline-block px-3 py-2.5 overflow-hidden border-2 border-white group focus:outline-none focus:ring" href="#">
+                      <div class="inline-flex items-center">
+                        <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-white group-hover:w-full group-active:bg-white"></span>
+                        <span class="relative text-sm font-medium text-white transition-colors group-hover:text-black">
+                          Læs om kunstneren
+                        </span>
+                        <svg class="w-7 h-auto ml-1 relative text-white group-hover:text-black" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
+                      </div>
+                    </a>
+                  </div>
+                <img src="/src/content/posters/poster-4.jpg" class="h-fit w-auto" alt="chair" />
+                </div>
+              </div>
+
+              <!-- Guillaume Raoux -->
+              <div>
+                <div class="relative">
+                  <div class="absolute bottom-0 left-0 p-4 bg-black">
+                    <h2 class="text-2xl font-semibold 5 text-white">Guillaume Raoux</h2>
+                    <a class="relative mt-4 inline-block px-3 py-2.5 overflow-hidden border-2 border-white group focus:outline-none focus:ring" href="#">
+                      <div class="inline-flex items-center">
+                        <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-white group-hover:w-full group-active:bg-white"></span>
+                        <span class="relative text-sm font-medium text-white transition-colors group-hover:text-black">
+                          Læs om kunstneren
+                        </span>
+                        <svg class="w-7 h-auto ml-1 relative text-white group-hover:text-black" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
+                      </div>
+                    </a>
+                  </div>
+                <img src="/src/content/kalvebod-poster-vaeg.jpg" class="h-fit w-auto" alt="chair" />
+                </div>
+              </div> 
+          </div>
             <!-- inspiration end -->
 
             <!-- pagination start -->
