--- a/src/inspiration.html
+++ b/src/inspiration.html
@@ -261,10 +261,10 @@
                                 <p class="p-6 text-xs font-medium leading-3 text-white absolute top-0 right-0">23.
                                     Februar 2022</p>
                                 <div class="absolute bottom-0 left-0 p-6">
-                                    <h2 class="text-xl font-semibold 5 text-white">Naturen på væggen</h2>
-                                    <p class="text-base leading-4 text-white mt-2">Byd naturen ind i stuen
+                                    <h2 class="text-xl font-semibold 5 text-white">How to</h2>
+                                    <p class="text-base leading-4 text-white mt-2">En guide til din billedvæg
                                     </p>
-                                    <a href="post.html"
+                                    <a href="how_to_post.html"
                                         class="focus:outline-none focus:underline flex items-center mt-4 cursor-pointer text-white hover:text-gray-200 hover:underline">
                                         <p class="pr-2 text-sm font-medium leading-none">Læs mere</p>
                                         <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/blog-I-svg1.svg"
@@ -272,7 +272,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <img src="content/posters/poster-5.jpg" class="w-full" alt="wall design" />
+                            <img src="content/billedvaeg/billedvaeg_content_01_Farver.png" class="w-full" alt="wall design" />
                         </div>
                     </div>
                     <div class="relative">
